# shaanchanchani.github.io

./: .gitignore  jupyter-lite.json  next.config.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements-jupyterlite.txt  requirements.txt  tailwind.config.ts
.github/workflows/: deploy.yml  nextjs.yml
app/: globals.css  layout.tsx  page.tsx
app/articles/camo/: page.tsx
app/articles/sportsbook-props/: page.tsx
app/blog/: page.tsx
app/blog/[slug]/: page.tsx
app/blog/first-post/: page.tsx
app/components/: CodeBlock.tsx  MathFormula.tsx  ResultsTable.tsx
app/components/SportsbookPropsArticle/: TableRenderer.tsx
app/ngs-visualizer/: page.tsx
app/projects/ngs-visualizer/: page.tsx
app/resume/: page.tsx
components/: ChartBlock.tsx  DynamicPlot.tsx  MarkdownWithMath.tsx  Sidebar.tsx  VisualizationBlock.tsx
components/SwipeableCardStack/: SwipeableCardStack.tsx  index.tsx
content/blog/: first-post.md
lib/: blog.ts  nfl_animator.ts
public/: play_data.json
scripts/: extract_notebook_images.py  generate_play_data.py
