[project]
name = "ngs-visualizer"
version = "0.1.0"
description = "NFL Next Gen Stats Play Visualizer"
requires-python = ">=3.9"
authors = [
    { name = "Shaan Chanchani" }
]
dependencies = [
    "pandas==2.1.4",
    "plotly==5.18.0",
    "google-cloud-storage==2.13.0",
    "pyarrow==14.0.1",
    "opencv-python",
    "pillow==10.1.0",
    "numpy==1.26.2",
    "polars==0.20.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]